add softwarePkgDetail controller
